# shielddb

./: .gitignore  Dockerfile  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  pyproject.toml
dashboard/: .firebaserc  Dockerfile.frontend  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
duogaurd_mcp/: __init__.py  agent_client.py  api.py  database.py  main.py  moderator.py  seed_large_data.py  seed_rules.py  server.py  test.py
