[project]
name = "duogaurd-mcp"
version = "0.1.0"
description = "ShieldDB: The Guarded Autonomous Database Administrator MCP Server powered by DuoGuard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.9.0",
    "fastmcp>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-genai>=0.1.0",
    "pymongo>=4.6.0",
    "mongomock>=4.3.0",
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.29.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
